# Programming

Cpp/: acmp.cpp  logic_circuits.cpp
Cpp/Projects/: CMakeLists.txt
Cpp/Projects/Nim/: nim.cpp
Cpp/Projects/calculator/: CMakeLists.txt  calculating.cpp  calculating.h  const.h  main.cpp  map_func.cpp  map_func.h  test.txt  test_result.txt  token.cpp  token.h  variable.cpp  variable.h
Cpp/Projects/graph_test/: CMakeLists.txt  a.out  main.cpp
Cpp/Projects/logic_circuits/: CMakeLists.txt  elements.cpp  elements.h  elements_declare.h  main.cpp
Cpp/lib/FLTK/FLTK.framework/Resources/CMake/: FLTK-Targets-release.cmake  FLTK-Targets.cmake  FLTKConfig.cmake  UseFLTK.cmake
python/homeworks/hw1/lsm_project/lsm/: functions.py
